[workspace.package]
authors = ["Soil contributors <legal@bitarray.dev>"]
edition = "2021"
homepage = "https://soil.rs"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository = "https://github.com/soil-rs/soil"

[workspace]
resolver = "2"

members = [
	"crates/subsoil",
	"crates/subsoil-macros",
	"crates/soil-babe",
	"crates/soil-aura",
	"crates/soil-beefy",
	"crates/plant-authority-discovery",
	"crates/soil-chain-spec",
	"crates/soil-chain-spec-macros",
	"crates/soil-cli",
	"crates/soil-consensus",
	"crates/soil-client",
	"crates/soil-manual-seal",
	"crates/subsoil-crypto-hashing",
	"crates/soil-grandpa",
	"crates/soil/mmr-gadget",
	"crates/soil-network",
	"crates/soil-pow",
	"crates/soil-test-fuzz",
	"crates/soil-rpc",
	"crates/soil-test",
	"crates/soil/runtime-interface/test-wasm",
	"crates/soil/runtime-interface/test-wasm-deprecated",
	"crates/soil/runtime-test",
	"crates/soil/runtime-utilities",
	"crates/soil-service",
	"crates/soil/statement-store",
	"crates/soil-sync-state-rpc",
	"crates/soil-telemetry",
	"crates/soil/transaction-storage-proof",
	"contrib/plant-alliance",
	"crates/plant-asset-conversion",
	"crates/plant-asset-conversion-ops",
	"contrib/plant-asset-rate",
	"contrib/plant-asset-rewards",
	"crates/plant-assets",
	"contrib/plant-assets-freezer",
	"contrib/plant-assets-holder",
	"contrib/plant-atomic-swap",
	"crates/topsoil/aura",
	"crates/topsoil/authorship",
	"crates/topsoil/babe",
	"crates/plant-bags-list",
	"crates/plant-bags-list-remote-tests",
	"crates/topsoil/balances",
	"crates/topsoil/beefy",
	"crates/topsoil/beefy-mmr",
	"crates/topsoil/benchmarking",
	"crates/topsoil/benchmarking/pov",
	"contrib/plant-bounties",
	"contrib/plant-broker",
	"contrib/plant-child-bounties",
	"crates/plant-collective",
	"contrib/plant-conviction-voting",
	"contrib/plant-core-fellowship",
	"contrib/plant-dap",
	"contrib/plant-delegated-staking",
	"contrib/plant-democracy",
	"contrib/plant-dummy-dim",
	"contrib/plant-election-provider-multi-block",
	"contrib/plant-election-provider-multi-phase",
	"contrib/plant-election-provider-multi-phase/test-staking-e2e",
	"crates/plant-election-provider",
	"crates/plant-election-provider-macros",
	"contrib/plant-elections-phragmen",
	"contrib/plant-examples",
	"contrib/plant-examples/authorization-tx-extension",
	"contrib/plant-examples/basic",
	"contrib/plant-examples/default-config",
	"contrib/plant-examples/dev-mode",
	"contrib/plant-examples/frame-crate",
	"contrib/plant-examples/kitchensink",
	"contrib/plant-examples/offchain-worker",
	"contrib/plant-examples/single-block-migrations",
	"contrib/plant-examples/split",
	"crates/topsoil/executive",
	"contrib/plant-fast-unstake",
	"contrib/plant-glutton",
	"crates/topsoil/grandpa",
	"contrib/plant-honzon/oracle",
	"contrib/plant-honzon/oracle/runtime-api",
	"contrib/plant-identity",
	"crates/topsoil/im-online",
	"contrib/plant-indices",
	"contrib/plant-insecure-randomness-collective-flip",
	"contrib/plant-lottery",
	"contrib/plant-membership",
	"crates/plant-mmr",
	"contrib/plant-message-queue",
	"contrib/plant-meta-tx",
	"crates/plant-metadata-hash-extension",
	"contrib/plant-mixnet",
	"contrib/plant-multi-asset-bounties",
	"contrib/plant-multisig",
	"contrib/plant-nft-fractionalization",
	"contrib/plant-nfts",
	"contrib/plant-nfts/runtime-api",
	"contrib/plant-nis",
	"contrib/plant-node-authorization",
	"contrib/plant-nomination-pools",
	"contrib/plant-nomination-pools/benchmarking",
	"contrib/plant-nomination-pools/fuzzer",
	"contrib/plant-nomination-pools/runtime-api",
	"crates/topsoil/offences",
	"crates/topsoil/offences/benchmarking",
	"contrib/plant-origin-restriction",
	"contrib/plant-paged-list",
	"contrib/plant-paged-list/fuzzer",
	"contrib/plant-parameters",
	"contrib/plant-people",
	"contrib/plant-preimage",
	"contrib/plant-proxy",
	"contrib/plant-ranked-collective",
	"contrib/plant-recovery",
	"contrib/plant-referenda",
	"contrib/plant-remark",
	"contrib/plant-root-offences",
	"crates/plant-root-testing",
	"contrib/plant-safe-mode",
	"contrib/plant-salary",
	"crates/topsoil/sassafras",
	"contrib/plant-scheduler",
	"contrib/plant-scored-pool",
	"crates/topsoil/session",
	"crates/topsoil/session/benchmarking",
	"contrib/plant-society",
	"crates/plant-staking",
	"crates/plant-staking-reward-curve",
	"crates/plant-staking-reward-fn",
	"crates/plant-staking-runtime-api",
	"contrib/plant-state-trie-migration",
	"contrib/plant-statement",
	"contrib/plant-sudo",
	"crates/topsoil/support",
	"crates/topsoil/support/procedural",
	"crates/topsoil/support/procedural/tools",
	"crates/topsoil/support/procedural/tools/macros",
	"crates/topsoil/support/test",
	"crates/topsoil/support/test/compile_pass",
	"crates/topsoil/support/test/pallet",
	"crates/topsoil/support/test/stg_frame_crate",
	"crates/topsoil/system",
	"crates/topsoil/system/benchmarking",
	"crates/topsoil/system/rpc/runtime-api",
	"crates/topsoil/timestamp",
	"contrib/plant-tips",
	"crates/topsoil/topsoil",
	"crates/topsoil/transaction-payment",
	"crates/topsoil/transaction-payment/asset-conversion-tx-payment",
	"crates/topsoil/transaction-payment/asset-tx-payment",
	"crates/topsoil/transaction-payment/rpc",
	"crates/topsoil/transaction-payment/rpc/runtime-api",
	"crates/topsoil/transaction-storage",
	"contrib/plant-treasury",
	"crates/topsoil/try-runtime",
	"contrib/plant-tx-pause",
	"contrib/plant-uniques",
	"crates/topsoil/utility",
	"contrib/plant-verify-signature",
	"contrib/plant-vesting",
	"contrib/plant-whitelist",

	"crates/substrate/fork-tree",
	"crates/substrate/frame-remote-externalities",
	"crates/substrate/generate-bags",
	"contrib/soil-test-staging-node-runtime",
	"contrib/soil-test-staging-node-bench",
	"contrib/soil-test-staging-node-primitives",
	"contrib/soil-test-staging-node-rpc",
	"contrib/soil-test-staging-node-generate-bags",
	"crates/substrate/node-template-release",
	"contrib/soil-test-staging-node-testing",
	"contrib/soil-test-staging-node-spec-builder",
	"contrib/soil-test-staging-node-cli",
	"contrib/soil-test-staging-node-inspect",
	"crates/substrate/subkey",
	"crates/substrate/substrate-bip39",
	"crates/substrate/substrate-build-script-utils",
	"contrib/soil-test-staging-node-cli-test-utils",
	"crates/substrate/substrate-frame-rpc-support",
	"crates/substrate/substrate-frame-rpc-system",
	"crates/substrate/substrate-prometheus-endpoint",
	"crates/soil-test-node-client",
	"crates/soil-test-node-runtime",
	"crates/soil-test-node-runtime-client",
	"crates/soil-test-node-runtime-txpool",
	"crates/substrate/substrate-wasm-builder",
	"crates/soil-offchain",
	"crates/soil-txpool",
]


[workspace.lints.rust]
suspicious_double_ref_op = { level = "allow", priority = 2 }
# `substrate_runtime` is a common `cfg` condition name used in the repo.
unexpected_cfgs = { level = "warn", check-cfg = [
	'cfg(build_opt_level, values("3"))',
	'cfg(build_profile, values("debug", "release"))',
	'cfg(enable_alloc_error_handler)',
	'cfg(fuzzing)',
	'cfg(ignore_flaky_test)',
	'cfg(substrate_runtime)',
] }

[workspace.lints.clippy]
all = { level = "allow", priority = 0 }
bind_instead_of_map = { level = "allow", priority = 2 }              # stylistic
borrowed-box = { level = "allow", priority = 2 }                     # Reasonable to fix this one
complexity = { level = "warn", priority = 1 }
correctness = { level = "warn", priority = 1 }
default_constructed_unit_structs = { level = "allow", priority = 2 } # stylistic
derivable_impls = { level = "allow", priority = 2 }                  # false positives
eq_op = { level = "allow", priority = 2 }                            # In tests we test equality.
erasing_op = { level = "allow", priority = 2 }                       # E.g. 0 * DOLLARS
extra-unused-type-parameters = { level = "allow", priority = 2 }     # stylistic
identity-op = { level = "allow", priority = 2 }                      # One case where we do 0 +
if-same-then-else = { level = "allow", priority = 2 }
needless-lifetimes = { level = "allow", priority = 2 }               # generated code
needless_option_as_deref = { level = "allow", priority = 2 }         # false positives
nonminimal-bool = { level = "allow", priority = 2 }                  # maybe
option-map-unit-fn = { level = "allow", priority = 2 }               # stylistic
stable_sort_primitive = { level = "allow", priority = 2 }            # prefer stable sort
too-many-arguments = { level = "allow", priority = 2 }               # (Turning this on would lead to)
type_complexity = { level = "allow", priority = 2 }                  # raison d'etre
unit_arg = { level = "allow", priority = 2 }                         # stylistic
unnecessary_cast = { level = "allow", priority = 2 }                 # Types may change
useless_conversion = { level = "allow", priority = 2 }               # Types may change
while_immutable_condition = { level = "allow", priority = 2 }        # false positives
zero-prefixed-literal = { level = "allow", priority = 2 }            # 00_1000_000


[workspace.dependencies]

# Substrate path dependencies
soil-test-staging-node-spec-builder = { path = "contrib/soil-test-staging-node-spec-builder", default-features = false, package = "soil-test-staging-node-spec-builder" }
fork-tree = { path = "crates/substrate/fork-tree", default-features = false }
topsoil = { path = "crates/topsoil/topsoil", default-features = false }
topsoil-benchmarking = { path = "crates/topsoil/benchmarking", default-features = false }
topsoil-benchmarking-pallet-pov = { default-features = false, path = "crates/topsoil/benchmarking/pov" }
plant-election-provider-macros = { path = "crates/plant-election-provider-macros", default-features = false }
plant-election-provider = { path = "crates/plant-election-provider", default-features = false }
topsoil-executive = { path = "crates/topsoil/executive", default-features = false }
plant-metadata-hash-extension = { path = "crates/plant-metadata-hash-extension", default-features = false }
topsoil-support = { path = "crates/topsoil/support", default-features = false }
topsoil-support-procedural = { path = "crates/topsoil/support/procedural", default-features = false }
topsoil-support-procedural-tools = { path = "crates/topsoil/support/procedural/tools", default-features = false }
topsoil-support-procedural-tools-macros = { path = "crates/topsoil/support/procedural/tools/macros", default-features = false }
topsoil-support-test = { path = "crates/topsoil/support/test" }
topsoil-system = { path = "crates/topsoil/system", default-features = false }
topsoil-system-benchmarking = { path = "crates/topsoil/system/benchmarking", default-features = false }
topsoil-system-rpc-runtime-api = { path = "crates/topsoil/system/rpc/runtime-api", default-features = false }
topsoil-try-runtime = { path = "crates/topsoil/try-runtime", default-features = false }
generate-bags = { path = "crates/substrate/generate-bags", default-features = false }
soil-test-staging-node-runtime = { path = "contrib/soil-test-staging-node-runtime" }
soil-mmr-gadget = { path = "crates/soil/mmr-gadget", default-features = false }
soil-test-staging-node-cli = { path = "contrib/soil-test-staging-node-cli", package = "soil-test-staging-node-cli" }
soil-test-staging-node-inspect = { path = "contrib/soil-test-staging-node-inspect", default-features = false, package = "soil-test-staging-node-inspect" }
soil-test-staging-node-primitives = { path = "contrib/soil-test-staging-node-primitives", default-features = false }
soil-test-staging-node-rpc = { path = "contrib/soil-test-staging-node-rpc" }
soil-test-staging-node-testing = { path = "contrib/soil-test-staging-node-testing" }
plant-alliance = { path = "contrib/plant-alliance", default-features = false }
plant-asset-conversion = { path = "crates/plant-asset-conversion", default-features = false }
plant-asset-conversion-ops = { path = "crates/plant-asset-conversion-ops", default-features = false }
plant-asset-conversion-tx-payment = { path = "crates/topsoil/transaction-payment/asset-conversion-tx-payment", default-features = false }
plant-asset-rate = { path = "contrib/plant-asset-rate", default-features = false }
plant-asset-rewards = { path = "contrib/plant-asset-rewards", default-features = false }
topsoil-asset-tx-payment = { path = "crates/topsoil/transaction-payment/asset-tx-payment", default-features = false }
plant-assets = { path = "crates/plant-assets", default-features = false }
plant-assets-freezer = { path = "contrib/plant-assets-freezer", default-features = false }
plant-assets-holder = { path = "contrib/plant-assets-holder", default-features = false }
plant-atomic-swap = { default-features = false, path = "contrib/plant-atomic-swap" }
topsoil-aura = { path = "crates/topsoil/aura", default-features = false }
plant-authority-discovery = { path = "crates/plant-authority-discovery", default-features = false }
topsoil-authorship = { path = "crates/topsoil/authorship", default-features = false }
topsoil-babe = { path = "crates/topsoil/babe", default-features = false }
plant-bags-list = { path = "crates/plant-bags-list", default-features = false }
plant-bags-list-remote-tests = { path = "crates/plant-bags-list-remote-tests" }
topsoil-balances = { path = "crates/topsoil/balances", default-features = false }
topsoil-beefy = { path = "crates/topsoil/beefy", default-features = false }
topsoil-beefy-mmr = { path = "crates/topsoil/beefy-mmr", default-features = false }
plant-bounties = { path = "contrib/plant-bounties", default-features = false }
plant-broker = { path = "contrib/plant-broker", default-features = false }
plant-child-bounties = { path = "contrib/plant-child-bounties", default-features = false }
plant-collective = { path = "crates/plant-collective", default-features = false }
plant-conviction-voting = { path = "contrib/plant-conviction-voting", default-features = false }
plant-core-fellowship = { path = "contrib/plant-core-fellowship", default-features = false }
plant-dap = { path = "contrib/plant-dap", default-features = false }
plant-default-config-example = { path = "contrib/plant-examples/default-config", default-features = false }
plant-delegated-staking = { path = "contrib/plant-delegated-staking", default-features = false }
plant-democracy = { path = "contrib/plant-democracy", default-features = false }
plant-dev-mode = { path = "contrib/plant-examples/dev-mode", default-features = false }
plant-dummy-dim = { path = "contrib/plant-dummy-dim", default-features = false }
plant-election-provider-multi-block = { path = "contrib/plant-election-provider-multi-block", default-features = false }
plant-election-provider-multi-phase = { path = "contrib/plant-election-provider-multi-phase", default-features = false }
plant-elections-phragmen = { path = "contrib/plant-elections-phragmen", default-features = false }
plant-example-authorization-tx-extension = { path = "contrib/plant-examples/authorization-tx-extension", default-features = false }
plant-example-basic = { path = "contrib/plant-examples/basic", default-features = false }
plant-example-frame-crate = { path = "contrib/plant-examples/frame-crate", default-features = false }
plant-example-kitchensink = { path = "contrib/plant-examples/kitchensink", default-features = false }
plant-example-offchain-worker = { path = "contrib/plant-examples/offchain-worker", default-features = false }
plant-example-single-block-migrations = { path = "contrib/plant-examples/single-block-migrations", default-features = false }
plant-example-split = { path = "contrib/plant-examples/split", default-features = false }
plant-examples = { path = "contrib/plant-examples" }
plant-fast-unstake = { path = "contrib/plant-fast-unstake", default-features = false }
plant-glutton = { path = "contrib/plant-glutton", default-features = false }
topsoil-grandpa = { path = "crates/topsoil/grandpa", default-features = false }
plant-identity = { path = "contrib/plant-identity", default-features = false }
topsoil-im-online = { path = "crates/topsoil/im-online", default-features = false }
plant-indices = { path = "contrib/plant-indices", default-features = false }
plant-insecure-randomness-collective-flip = { path = "contrib/plant-insecure-randomness-collective-flip", default-features = false }
plant-lottery = { default-features = false, path = "contrib/plant-lottery" }
plant-membership = { path = "contrib/plant-membership", default-features = false }
plant-message-queue = { path = "contrib/plant-message-queue", default-features = false }
plant-meta-tx = { path = "contrib/plant-meta-tx", default-features = false }
plant-mixnet = { default-features = false, path = "contrib/plant-mixnet" }
plant-mmr = { path = "crates/plant-mmr", default-features = false }
plant-multi-asset-bounties = { path = "contrib/plant-multi-asset-bounties", default-features = false }
plant-multisig = { path = "contrib/plant-multisig", default-features = false }
plant-nft-fractionalization = { path = "contrib/plant-nft-fractionalization", default-features = false }
plant-nfts = { path = "contrib/plant-nfts", default-features = false }
plant-nfts-runtime-api = { path = "contrib/plant-nfts/runtime-api", default-features = false }
plant-nis = { path = "contrib/plant-nis", default-features = false }
plant-node-authorization = { default-features = false, path = "contrib/plant-node-authorization" }
plant-nomination-pools = { path = "contrib/plant-nomination-pools", default-features = false }
plant-nomination-pools-benchmarking = { path = "contrib/plant-nomination-pools/benchmarking", default-features = false }
plant-nomination-pools-runtime-api = { path = "contrib/plant-nomination-pools/runtime-api", default-features = false }
topsoil-offences = { path = "crates/topsoil/offences", default-features = false }
topsoil-offences-benchmarking = { path = "crates/topsoil/offences/benchmarking", default-features = false }
plant-oracle = { path = "contrib/plant-honzon/oracle", default-features = false }
plant-oracle-runtime-api = { path = "contrib/plant-honzon/oracle/runtime-api", default-features = false }
plant-origin-restriction = { path = "contrib/plant-origin-restriction", default-features = false }
plant-paged-list = { path = "contrib/plant-paged-list", default-features = false }
plant-parameters = { path = "contrib/plant-parameters", default-features = false }
plant-people = { path = "contrib/plant-people", default-features = false }
plant-preimage = { path = "contrib/plant-preimage", default-features = false }
plant-proxy = { path = "contrib/plant-proxy", default-features = false }
plant-ranked-collective = { path = "contrib/plant-ranked-collective", default-features = false }
plant-recovery = { path = "contrib/plant-recovery", default-features = false }
plant-referenda = { path = "contrib/plant-referenda", default-features = false }
plant-remark = { default-features = false, path = "contrib/plant-remark" }
plant-root-offences = { default-features = false, path = "contrib/plant-root-offences" }
plant-root-testing = { path = "crates/plant-root-testing", default-features = false }
plant-safe-mode = { default-features = false, path = "contrib/plant-safe-mode" }
plant-salary = { path = "contrib/plant-salary", default-features = false }
plant-scheduler = { path = "contrib/plant-scheduler", default-features = false }
plant-scored-pool = { default-features = false, path = "contrib/plant-scored-pool" }
topsoil-session = { path = "crates/topsoil/session", default-features = false }
topsoil-session-benchmarking = { path = "crates/topsoil/session/benchmarking", default-features = false }
plant-society = { path = "contrib/plant-society", default-features = false }
plant-staking = { path = "crates/plant-staking", default-features = false }
plant-staking-reward-curve = { path = "crates/plant-staking-reward-curve", default-features = false }
plant-staking-reward-fn = { path = "crates/plant-staking-reward-fn", default-features = false }
plant-staking-runtime-api = { path = "crates/plant-staking-runtime-api", default-features = false }
plant-state-trie-migration = { path = "contrib/plant-state-trie-migration", default-features = false }
plant-statement = { default-features = false, path = "contrib/plant-statement" }
plant-sudo = { path = "contrib/plant-sudo", default-features = false }
topsoil-timestamp = { path = "crates/topsoil/timestamp", default-features = false }
plant-tips = { path = "contrib/plant-tips", default-features = false }
topsoil-transaction-payment = { path = "crates/topsoil/transaction-payment", default-features = false }
topsoil-transaction-payment-rpc = { path = "crates/topsoil/transaction-payment/rpc", default-features = false }
topsoil-transaction-payment-rpc-runtime-api = { path = "crates/topsoil/transaction-payment/rpc/runtime-api", default-features = false }
topsoil-transaction-storage = { default-features = false, path = "crates/topsoil/transaction-storage" }
plant-treasury = { path = "contrib/plant-treasury", default-features = false }
plant-tx-pause = { default-features = false, path = "contrib/plant-tx-pause" }
plant-uniques = { path = "contrib/plant-uniques", default-features = false }
topsoil-utility = { path = "crates/topsoil/utility", default-features = false }
plant-verify-signature = { path = "contrib/plant-verify-signature", default-features = false }
plant-vesting = { path = "contrib/plant-vesting", default-features = false }
plant-whitelist = { path = "contrib/plant-whitelist", default-features = false }
prometheus-endpoint = { path = "crates/substrate/substrate-prometheus-endpoint", default-features = false, package = "substrate-prometheus-endpoint" }
remote-externalities = { path = "crates/substrate/frame-remote-externalities", default-features = false, package = "frame-remote-externalities" }
soil-chain-spec = { path = "crates/soil-chain-spec", default-features = false }
soil-chain-spec-macros = { path = "crates/soil-chain-spec-macros", default-features = false }
soil-cli = { path = "crates/soil-cli", default-features = false }
soil-client = { path = "crates/soil-client", default-features = false }
soil-consensus = { path = "crates/soil-consensus", default-features = false }
soil-aura = { path = "crates/soil-aura", default-features = false }
soil-babe = { path = "crates/soil-babe", default-features = false }
soil-beefy = { path = "crates/soil-beefy", default-features = false }
soil-grandpa = { path = "crates/soil-grandpa", default-features = false }
soil-manual-seal = { path = "crates/soil-manual-seal", default-features = false }
soil-pow = { path = "crates/soil-pow", default-features = false }
soil-network = { path = "crates/soil-network", default-features = false }
soil-offchain = { path = "crates/soil-offchain", default-features = false }
soil-test = { path = "crates/soil-test" }
soil-runtime-test = { path = "crates/soil/runtime-test" }
soil-runtime-utilities = { path = "crates/soil/runtime-utilities", default-features = true }
soil-service = { path = "crates/soil-service", default-features = false }
soil-sync-state-rpc = { path = "crates/soil-sync-state-rpc", default-features = false }
soil-telemetry = { path = "crates/soil-telemetry", default-features = false }
soil-txpool = { path = "crates/soil-txpool", default-features = false }
subsoil = { path = "crates/subsoil", default-features = false }
subsoil-crypto-hashing = { path = "crates/subsoil-crypto-hashing", default-features = false }
subsoil-macros = { path = "crates/subsoil-macros" }
soil-rpc = { path = "crates/soil-rpc", default-features = false }
sp-runtime-interface-test-wasm = { path = "crates/soil/runtime-interface/test-wasm" }
sp-runtime-interface-test-wasm-deprecated = { path = "crates/soil/runtime-interface/test-wasm-deprecated" }
soil-statement-store = { path = "crates/soil/statement-store", default-features = false }
soil-transaction-storage-proof = { path = "crates/soil/transaction-storage-proof", default-features = false }
subkey = { path = "crates/substrate/subkey", default-features = false }
substrate-bip39 = { path = "crates/substrate/substrate-bip39", default-features = false }
substrate-build-script-utils = { path = "crates/substrate/substrate-build-script-utils", default-features = false }
soil-test-staging-node-cli-test-utils = { path = "contrib/soil-test-staging-node-cli-test-utils" }
substrate-frame-rpc-support = { default-features = false, path = "crates/substrate/substrate-frame-rpc-support" }
substrate-frame-rpc-system = { path = "crates/substrate/substrate-frame-rpc-system", default-features = false }
soil-test-node-client = { path = "crates/soil-test-node-client" }
soil-test-node-runtime = { path = "crates/soil-test-node-runtime" }
soil-test-node-runtime-client = { path = "crates/soil-test-node-runtime-client" }
soil-test-node-runtime-txpool = { path = "crates/soil-test-node-runtime-txpool" }
substrate-wasm-builder = { path = "crates/substrate/substrate-wasm-builder", default-features = false }
test-pallet = { path = "crates/topsoil/support/test/pallet", default-features = false, package = "topsoil-support-test-pallet" }

# External dependencies
Inflector = { version = "0.11.4" }
aes-gcm = { version = "0.10" }
ahash = { version = "0.8.2" }
alloy-consensus = { version = "1.0.41", default-features = false }
alloy-core = { version = "1.2.1", default-features = false }
alloy-primitives = { version = "1.2.1", default-features = false }
alloy-rlp = { version = "0.3", default-features = false }
alloy-trie = { version = "0.9.1", default-features = false }
always-assert = { version = "0.1" }
anyhow = { version = "1.0.81", default-features = false }
approx = { version = "0.5.1" }
aquamarine = { version = "0.5.0" }
arbitrary = { version = "1.3.2" }
ark-bls12-377 = { version = "0.5.0", default-features = false }
ark-bls12-377-ext = { version = "0.5.0", default-features = false }
ark-bls12-381 = { version = "0.5.0", default-features = false }
ark-bls12-381-ext = { version = "0.5.0", default-features = false }
ark-bw6-761 = { version = "0.5.0", default-features = false }
ark-bw6-761-ext = { version = "0.5.0", default-features = false }
ark-ec = { version = "0.5.0", default-features = false }
ark-ed-on-bls12-377 = { version = "0.5.0", default-features = false }
ark-ed-on-bls12-377-ext = { version = "0.5.0", default-features = false }
ark-ed-on-bls12-381-bandersnatch = { version = "0.5.0", default-features = false }
ark-ed-on-bls12-381-bandersnatch-ext = { version = "0.5.0", default-features = false }
ark-ff = { version = "0.5.0", default-features = false }
ark-scale = { version = "0.0.13", default-features = false }
ark-std = { version = "0.5.0", default-features = false }
ark-vrf = { version = "0.1.0", default-features = false }
array-bytes = { version = "6.2.2", default-features = false }
arrayvec = { version = "0.7.4" }
assert_cmd = { version = "2.0.14" }
assert_matches = { version = "1.5.0" }
async-channel = { version = "1.8.0" }
async-std = { version = "1.9.0" }
async-trait = { version = "0.1.88" }
asynchronous-codec = { version = "0.6" }
backoff = { version = "0.4" }
backtrace = { version = "0.3.71" }
bincode = { version = "1.3.3" }
bip39 = { version = "2.2.0", default-features = false }
bitflags = { version = "1.3.2" }
bitvec = { version = "1.0.1", default-features = false }
blake2 = { version = "0.10.4", default-features = false }
blake2b_simd = { version = "1.0.2", default-features = false }
blake3 = { version = "1.5" }
bn = { package = "substrate-bn", version = "0.6", default-features = false }
bounded-collections = { version = "0.3.2", default-features = false }
bounded-vec = { version = "0.7" }
bs58 = { version = "0.5.1", default-features = false }
build-helper = { version = "0.1.1" }
byte-slice-cast = { version = "1.2.1", default-features = false }
byteorder = { version = "1.3.2", default-features = false }
bytes = { version = "1.4.0", default-features = false }
cargo_metadata = { version = "0.15.4" }
cfg-expr = { version = "0.15.5" }
cfg-if = { version = "1.0" }
chrono = { version = "0.4.31" }
cid = { version = "0.11.1" }
clap = { version = "4.5.13" }
clap_complete = { version = "4.5.13" }
cmd_lib = { version = "1.9.5" }
coarsetime = { version = "0.1.22" }
codec = { version = "3.7.5", default-features = false, package = "parity-scale-codec" }
color-eyre = { version = "0.6.3", default-features = false }
color-print = { version = "0.3.4" }
colored = { version = "2.0.4" }
comfy-table = { version = "7.1.4", default-features = false }
console = { version = "0.15.8" }
const-hex = { version = "1.10.0", default-features = false }
cpu-time = { version = "1.0.0" }
criterion = { version = "0.5.1", default-features = false }
curve25519-dalek = { version = "4.1.3" }
derive-syn-parse = { version = "0.2.0" }
derive-where = { version = "1.2.7" }
derive_more = { version = "0.99.17", default-features = false }
digest = { version = "0.10.3", default-features = false }
directories = { version = "5.0.1" }
dlmalloc = { version = "0.2.4" }
docify = { version = "0.2.9" }
dyn-clonable = { version = "0.9.0" }
dyn-clone = { version = "1.0.16" }
ed25519-dalek = { version = "2.1", default-features = false }
ed25519-zebra = { version = "4.0.3", default-features = false }
either = { version = "1.8.1", default-features = false }
enumflags2 = { version = "0.7.11" }
enumn = { version = "0.1.13" }
env_filter = { version = "0.1.3" }
env_logger = { version = "0.11.2" }
environmental = { version = "1.1.4", default-features = false }
ethabi = { version = "2.0.0", default-features = false, package = "ethabi-decode" }
ethbloom = { version = "0.14.1", default-features = false }
ethereum-types = { version = "0.15.1", default-features = false }
exit-future = { version = "0.2.0" }
expander = { version = "2.0.0" }
fatality = { version = "0.1.1" }
fdlimit = { version = "0.3.0" }
femme = { version = "2.2.1" }
filetime = { version = "0.2.16" }
finality-grandpa = { version = "0.16.3", default-features = false }
flate2 = { version = "1.0" }
fnv = { version = "1.0.6" }
foldhash = { version = "0.1.5", default-features = false }
forwarded-header-value = { version = "0.1.1" }
fraction = { version = "0.13.1" }
frame-metadata = { version = "23.0.1", default-features = false }
fs4 = { version = "0.7.0" }
fs_extra = { version = "1.3.0" }
futures = { version = "0.3.31" }
futures-timer = { version = "3.0.2" }
futures-util = { version = "0.3.30", default-features = false }
gethostname = { version = "0.2.3" }
git2 = { version = "0.20.0", default-features = false }
glob = { version = "0.3" }
governor = { version = "0.6.0" }
handlebars = { version = "5.1.0" }
hash-db = { version = "0.16.0", default-features = false }
hash256-std-hasher = { version = "0.15.2", default-features = false }
hashbrown = "0.15.3"
hex = { version = "0.4.3", default-features = false }
hex-literal = { version = "0.4.1", default-features = false }
hkdf = { version = "0.12.0" }
hmac = { version = "0.12.1" }
honggfuzz = { version = "0.5.55" }
http = { version = "1.1" }
http-body = { version = "1", default-features = false }
http-body-util = { version = "0.1.2", default-features = false }
humantime-serde = { version = "1.1" }
hyper = { version = "1.3.1", default-features = false }
hyper-rustls = { version = "0.27.3", default-features = false, features = [
"http1",
"http2",
"logging",
"ring",
"rustls-native-certs",
"tls12",
] }
hyper-util = { version = "0.1.5", default-features = false }
impl-serde = { version = "0.5.0", default-features = false }
impl-trait-for-tuples = { version = "0.2.2" }
indexmap = { version = "2.7.1" }
indicatif = { version = "0.17.7" }
integer-sqrt = { version = "0.1.2" }
ip_network = { version = "0.4.1" }
is-terminal = { version = "0.4.9" }
is_executable = { version = "1.0.1" }
isahc = { version = "1.2" }
itertools = { version = "0.11" }
jobserver = { version = "0.1.26" }
jsonpath_lib = { version = "0.3" }
jsonrpsee = { version = "0.24.10" }
jsonrpsee-core = { version = "0.24.10" }
k256 = { version = "0.13.4", default-features = false }
kvdb = { version = "0.13.0" }
kvdb-memorydb = { version = "0.13.0" }
kvdb-rocksdb = { version = "0.21.0" }
kvdb-shared-tests = { version = "0.11.0" }
landlock = { version = "0.3.0" }
libc = { version = "0.2.155" }
libp2p = { version = "0.54.1" }
libp2p-identity = { version = "0.2.9" }
libp2p-kad = { version = "0.46.2", default-features = false }
libsecp256k1 = { version = "0.7.0", default-features = false }
linked-hash-map = { version = "0.5.4" }
linked_hash_set = { version = "0.1.4" }
linregress = { version = "0.5.1" }
lite-json = { version = "0.2.0", default-features = false }
litep2p = { version = "0.13.2", features = ["rsa", "websocket"] }
log = { version = "0.4.22", default-features = false }
macro_magic = { version = "0.5.1" }
maplit = { version = "1.0.2" }
memmap2 = { version = "0.9.3" }
memory-db = { version = "0.34.0", default-features = false }
merkleized-metadata = { version = "0.5.0" }
merlin = { version = "3.0", default-features = false }
metered = { version = "0.6.1", default-features = false, package = "prioritized-metered-channel" }
milagro-bls = { version = "1.5.4", default-features = false, package = "snowbridge-milagro-bls" }
mixnet = { version = "0.7.0" }
mmr-lib = { version = "0.8.1", package = "polkadot-ckb-merkle-mountain-range", default-features = false }
mockall = { version = "0.13.1" }
multiaddr = { version = "0.18.1" }
multihash = { version = "0.19.1", default-features = false }
multistream-select = { version = "0.13.0" }
names = { version = "0.14.0", default-features = false }
nix = { version = "0.29.0" }
nohash-hasher = { version = "0.2.0" }
novelpoly = { version = "2.0.0", package = "reed-solomon-novelpoly" }
num-bigint = { version = "0.4.6", default-features = false }
num-format = { version = "0.4.3" }
num-integer = { version = "0.1.46", default-features = false }
num-rational = { version = "0.4.1" }
num-traits = { version = "0.2.17", default-features = false }
num_cpus = { version = "1.13.1" }
once_cell = { version = "1.21.3" }
orchestra = { version = "0.4.0", default-features = false }
parity-bytes = { version = "0.1.2", default-features = false }
parity-db = { version = "0.4.12" }
parity-wasm = { version = "0.45.0" }
parking_lot = { version = "0.12.1", default-features = false }
partial_sort = { version = "0.2.0" }
paste = { version = "1.0.15", default-features = false }
pbkdf2 = { version = "0.12.2", default-features = false }
pin-project = { version = "1.1.3" }
polkavm = { version = "0.30.0", default-features = false }
polkavm-common = { version = "0.30.0", default-features = false }
polkavm-derive = "0.30.0"
polkavm-linker = "0.30.0"
portpicker = { version = "0.1.1" }
pretty_assertions = { version = "1.3.0" }
primitive-types = { version = "0.13.1", default-features = false, features = ["num-traits"] }
proc-macro-crate = { version = "3.0.0" }
proc-macro-warning = { version = "1.0.0", default-features = false }
proc-macro2 = { version = "1.0.86" }
procfs = { version = "0.16.0" }
prometheus = { version = "0.13.0", default-features = false }
prometheus-parse = { version = "0.2.2" }
proptest = { version = "1" }
prost = { version = "0.12.4" }
prost-build = { version = "0.13.2" }
pyroscope = { version = "0.5.8" }
pyroscope_pprofrs = { version = "0.2.8" }
quick_cache = { version = "0.3" }
quickcheck = { version = "1.0.3", default-features = false }
quote = { version = "1.0.37" }
rand = { version = "0.8.5", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }
rand_core = { version = "0.6.2" }
rand_distr = { version = "0.4.3" }
rand_pcg = { version = "0.3.1" }
rbtag = { version = "0.3" }
ref-cast = { version = "1.0.23" }
regex = { version = "1.10.2" }
revm = { version = "27.0.2", default-features = false }
ripemd = { version = "0.1.3", default-features = false }
rlp = { version = "0.6.1", default-features = false }
rpassword = { version = "7.0.0" }
rstest = { version = "0.18.2" }
rustc-hash = { version = "1.1.0" }
rustc-hex = { version = "2.1.0", default-features = false }
rustix = { version = "1.0.3", default-features = false }
rustls = { version = "0.23.18", default-features = false, features = [
"logging",
"ring",
"std",
"tls12",
] }
rustversion = { version = "1.0.17" }
rusty-fork = { version = "0.3.0", default-features = false }
safe-mix = { version = "1.0", default-features = false }
scale-info = { version = "2.11.6", default-features = false }
schemars = { version = "0.8.13", default-features = false }
schnellru = { version = "0.2.3" }
schnorrkel = { version = "0.11.4", default-features = false }
seccompiler = { version = "0.4.0" }
secp256k1 = { version = "0.28.0", default-features = false }
secrecy = { version = "0.8.0", default-features = false }
serde = { version = "1.0.214", default-features = false }
serde-big-array = { version = "0.3.2" }
serde_derive = { version = "1.0.117" }
serde_json = { version = "1.0.132", default-features = false }
serde_with = { version = "3.12.0", default-features = false, features = ["hex", "macros"] }
serde_yaml = { version = "0.9" }
sha1 = { version = "0.10.6" }
sha2 = { version = "0.10.7", default-features = false }
sha3 = { version = "0.10.0", default-features = false }
shlex = { version = "1.3.0" }
simple-mermaid = { version = "0.1.1" }
slotmap = { version = "1.0" }
smallvec = { version = "1.11.0", default-features = false }
soketto = { version = "0.8.0" }
spinners = { version = "4.1.1" }
sqlx = { version = "0.8.2" }
ss58-registry = { version = "1.34.0", default-features = false }
ssz_rs = { version = "0.9.0", default-features = false }
ssz_rs_derive = { version = "0.9.0", default-features = false }
static_assertions = { version = "1.1.0", default-features = false }
static_init = { version = "1.0.3" }
strum = { version = "0.26.3", default-features = false }
subxt = { version = "0.44", default-features = false }
subxt-metadata = { version = "0.44", default-features = false }
subxt-signer = { version = "0.44" }
syn = { version = "2.0.87" }
sysinfo = { version = "0.30" }
tar = { version = "0.4" }
tempfile = { version = "3.8.1" }
test-case = { version = "=3.3.1" }
test-log = { version = "0.2.14" }
thiserror = { version = "1.0.64" }
thousands = { version = "0.2.0" }
threadpool = { version = "1.7" }
tikv-jemalloc-ctl = { version = "0.6.0", features = [
"stats",
] }
tikv-jemallocator = { version = "0.6.0" }
time = { version = "0.3" }
tiny-keccak = { version = "2.0.2" }
tokio = { version = "1.45.0", default-features = false }
tokio-retry = { version = "0.3.0" }
tokio-stream = { version = "0.1.14" }
tokio-test = { version = "0.4.4" }
tokio-tungstenite = { version = "0.26.2" }
tokio-util = { version = "0.7.8" }
toml = { version = "0.8.12" }
toml_edit = { version = "0.19" }
tower = { version = "0.4.13" }
tower-http = { version = "0.5.2" }
tracing = { version = "0.1.37", default-features = false }
tracing-core = { version = "0.1.32", default-features = false }
tracing-futures = { version = "0.2.4" }
tracing-log = { version = "0.2.0" }
tracing-subscriber = { version = "=0.3.19" }
trie-bench = { version = "0.42.1" }
trie-db = { version = "0.31.0", default-features = false }
trie-root = { version = "0.18.0", default-features = false }
trie-standardmap = { version = "0.16.0" }
trybuild = { version = "1.0.103" }
tt-call = { version = "1.0.8" }
tuplex = { version = "0.1", default-features = false }
twox-hash = { version = "1.6.3", default-features = false }
txtesttool = { version = "0.7.0", package = "substrate-txtesttool" }
unsigned-varint = { version = "0.7.2" }
url = { version = "2.5.4" }
verifiable = { version = "0.1", default-features = false }
void = { version = "1.0.2" }
w3f-bls = { version = "0.1.9", default-features = false }
wait-timeout = { version = "0.2" }
walkdir = { version = "2.5.0" }
wasm-instrument = { version = "0.4", default-features = false }
wasm-opt = { version = "0.116" }
wasm-timer = { version = "0.2.5" }
wasmi = { version = "0.32.3", default-features = false }
wasmtime = { version = "35.0.0", default-features = false }
wat = { version = "1.0.0" }
x25519-dalek = { version = "2.0" }
zeroize = { version = "1.7.0", default-features = false }
zombienet-configuration = { version = "0.4.5" }
zombienet-orchestrator = { version = "0.4.5" }
zombienet-sdk = { version = "0.4.5" }
zstd = { version = "0.12.4", default-features = false }

[profile.release]
# Polkadot runtime requires unwinding.
opt-level = 3
panic = "unwind"

[profile.dev]
# Debug info significantly slows down the build.
# This setting only keeps source line information for stack traces.
debug = "line-tables-only"

# make sure dev builds with backtrace do not slow us down
[profile.dev.package.backtrace]
inherits = "release"

[profile.production]
codegen-units = 1
inherits = "release"
lto = true

[profile.testnet]
debug = 1               # debug symbols are useful for profilers
debug-assertions = true
inherits = "release"
overflow-checks = true

# The list of dependencies below (which can be both direct and indirect dependencies) are crates
# that are suspected to be CPU-intensive, and that are unlikely to require debugging (as some of
# their debug info might be missing) or to require to be frequently recompiled. We compile these
# dependencies with `opt-level=3` even in "dev" mode in order to make "dev" mode more usable.
# The majority of these crates are cryptographic libraries.
#
# If you see an error mentioning "profile package spec ... did not match any packages", it
# probably concerns this list.
#
# This list is ordered alphabetically.
[profile.dev.package]
ark-vrf = { opt-level = 3 }
blake2 = { opt-level = 3 }
blake2b_simd = { opt-level = 3 }
chacha20poly1305 = { opt-level = 3 }
cranelift-codegen = { opt-level = 3 }
crc32fast = { opt-level = 3 }
crossbeam-deque = { opt-level = 3 }
crypto-mac = { opt-level = 3 }
curve25519-dalek = { opt-level = 3 }
ed25519-dalek = { opt-level = 3 }
flate2 = { opt-level = 3 }
futures-channel = { opt-level = 3 }
hash-db = { opt-level = 3 }
hashbrown = { opt-level = 3 }
hmac = { opt-level = 3 }
httparse = { opt-level = 3 }
integer-sqrt = { opt-level = 3 }
keccak = { opt-level = 3 }
libm = { opt-level = 3 }
librocksdb-sys = { opt-level = 3 }
libsecp256k1 = { opt-level = 3 }
libz-sys = { opt-level = 3 }
mio = { opt-level = 3 }
nalgebra = { opt-level = 3 }
num-bigint = { opt-level = 3 }
parking_lot = { opt-level = 3 }
parking_lot_core = { opt-level = 3 }
percent-encoding = { opt-level = 3 }
polkavm-linker = { opt-level = 3 }
primitive-types = { opt-level = 3 }
ring = { opt-level = 3 }
rustls = { opt-level = 3 }
sha2 = { opt-level = 3 }
sha3 = { opt-level = 3 }
smallvec = { opt-level = 3 }
snow = { opt-level = 3 }
substrate-bip39 = { opt-level = 3 }
twox-hash = { opt-level = 3 }
uint = { opt-level = 3 }
wasmi = { opt-level = 3 }
x25519-dalek = { opt-level = 3 }
yamux = { opt-level = 3 }
zeroize = { opt-level = 3 }
